[pipertts] Fix some compiler warnings
Signed-off-by: Florian Hotze <dev@florianhotze.com>